Fix unit and booking
